--- a/package.json
+++ b/package.json
@@ -6,16 +6,38 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@prisma/client": "^5.2.0",
+    "@radix-ui/react-alert-dialog": "^1.0.4",
+    "@radix-ui/react-context-menu": "^2.1.4",
+    "@radix-ui/react-progress": "^1.0.3",
+    "@radix-ui/react-slot": "^1.0.2",
     "autoprefixer": "10.4.15",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "framer-motion": "^10.16.4",
+    "howler": "^2.2.3",
+    "lucide-react": "^0.274.0",
     "next": "13.4.19",
+    "next-images": "^1.8.5",
+    "next-themes": "^0.2.1",
+    "next-transpile-modules": "^10.0.1",
     "postcss": "8.4.29",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3"
+    "react-icons": "^4.11.0",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss": "3.3.3",
+    "tailwindcss-animate": "^1.0.7"
+  },
+  "devDependencies": {
+    "@types/react": "^18.2.21",
+    "prisma": "^5.2.0",
+    "tailwind-scrollbar": "^3.0.5"
   }
 }
